<resources>
    <string name="app_name">Shameless Party</string>
    <string name="google_app_id">shameless-party-1495292389388</string>

    <string name="init_error_message">Copyright software does not want you to be a nice person. You cannot use this App in this phone, and we do not know why. Sorry.</string>
    <string name="init_error_ok">Ok</string>
    <string name="init_error_title">Error when initializing the App</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_party">Party</string>
    <string name="title_list">List</string>
    <string name="title_stats">Stats</string>

    <string name="exit_title">Exit Shameless</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="plus_one_image_description">plus one party image</string>
    <string name="first_back_message">Press back again to exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donating_ngo">DONATING NGO</string>
    <string name="date_hint">When is the party?</string>
    <string name="time_hint">At what time do you plan to get home?</string>
    <string name="ngo_hint">Who will you donate?</string>
    <string name="location_hint">Where do you live? I am not a stalker, I swear!</string>
    <string name="party_button">Let\'s party!</string>
    <string name="ngo_logo_description">ngo logo</string>
    <string name="every">€ every</string>
    <string name="period_hint">Time period (min)</string>
    <string name="period_default_value">1</string>
    <string name="money_default_value">1</string>
    <string name="minute">minute(s)</string>

    <string name="party_title_dialog">Give this party a title</string>
    <string name="done">Done</string>
    <string name="continue_str">Continue</string>
    <string name="party_create_success_message">Party scheduled successfully!</string>
    <string name="party_create_failure_message">Something went wrong!</string>
    <string name="already_partying_creation_title">There is another party</string>
    <string name="already_partying_creation_message">You cannot have two parties at the same time. Do you want to continue anyway or go back and do something with your life?</string>
    <string name="invalid_amount_creation_title">Wrong amount of money</string>
    <string name="invalid_amount_creation_message">The amount of money you are giving is not correct. Do you want to continue anyway?</string>
    <string name="past_party_creation_title">Invalid date for this party</string>
    <string name="past_party_creation_message">If you set this date to this party it won\'t be scheduled because it\'s in the past. Are you sure you want to continue?</string>
    <string name="private_software_location_error_message">Private software companies like Google does not let us to get your location</string>
    <string name="location_error">We cannot get your location right now!</string>
    <string name="wierd_location_creation_title">Wierd location</string>
    <string name="wierd_location_creation_message">Your home is a very rare place, you sould check the location again. Do you want to continue?</string>
    <string name="cancel_party">Cancel party</string>
    <string name="finish_party">FINISH PARTY</string>
    <string name="default_money">0 €</string>
    <string name="my_donations">My donations</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>

</resources>
