<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="felixarpa.shamelessapp.presentation.fragment.CreatePartyFragment">


    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:src="@mipmap/earth"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/ngo_hint"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:gravity="end"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            android:text="@string/donating_ngo" />

        <Spinner
            android:id="@+id/ngo_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/date_hint"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:gravity="end"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            android:text="@string/date_hint" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primaryText"
            android:text="[current date]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/time_hint"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:gravity="end"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            android:text="@string/time_hint" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primaryText"
            android:text="[current time]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/location_button"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryLight"
            android:textColor="@color/primaryText"
            android:text="HOME LOCATION" />
    </LinearLayout>

    <Button
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark"
        android:textColor="@color/white"
        android:text="@string/party_button" />


</LinearLayout>
