<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context="felixarpa.shamelessapp.presentation.fragment.PartyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="center"
            card_view:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/party_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/primaryDark"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/party_distance"
            android:drawableStart="@drawable/ic_home_map_marker_white_48dp"
            android:drawablePadding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/party_remaining_time"
            android:drawableStart="@drawable/ic_timer_white_48dp"
            android:drawablePadding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/party_money"
            android:drawableStart="@drawable/ic_cash_usd_white_48dp"
            android:drawablePadding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/default_money"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel_party"
            android:textColor="@color/primaryLight"
            android:textSize="12sp"
            android:padding="16dp" />



    </LinearLayout>

    <TextView
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/finish_party"
        android:textColor="@color/primaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:visibility="gone"/>

</RelativeLayout>
